[gd_scene load_steps=22 format=3 uid="uid://d1657tidee7b4"]

[ext_resource type="Texture2D" uid="uid://bimemgrqmquop" path="res://GrassTest.png" id="1_k1dng"]
[ext_resource type="Script" uid="uid://d1reetcp6cvup" path="res://camera_player.gd" id="1_nnask"]
[ext_resource type="Script" uid="uid://b7lpirrs0muws" path="res://player.gd" id="1_uc67x"]
[ext_resource type="Script" uid="uid://ykyei4umsfg4" path="res://grass_test.gd" id="2_cbkd1"]
[ext_resource type="Texture2D" uid="uid://8ftuale8ehyc" path="res://white.jpg" id="2_jkt0x"]
[ext_resource type="Texture2D" uid="uid://cnotyc4eo6eym" path="res://tree_sample.png" id="2_kmp1v"]
[ext_resource type="Script" uid="uid://8gcub7l4vaud" path="res://tree_generator.gd" id="2_nnask"]
[ext_resource type="Texture2D" uid="uid://d35cku6p1hnpu" path="res://particles.png" id="3_qwe0f"]
[ext_resource type="Texture2D" uid="uid://dfwrw5sju3h1o" path="res://enemy.png" id="7_036ib"]
[ext_resource type="Script" uid="uid://c63psl1ac1hbh" path="res://spawner.gd" id="8_sdjp3"]
[ext_resource type="Script" uid="uid://cyqohljrgbdt1" path="res://CheckArenaCollision.gd" id="9_gdfr4"]
[ext_resource type="PackedScene" uid="uid://byppoq1xx1c5w" path="res://enemy_1.tscn" id="9_sdjp3"]
[ext_resource type="Texture2D" uid="uid://cadbbwjslvvxh" path="res://arenaPlaceholder.png" id="11_jkt0x"]
[ext_resource type="Texture2D" uid="uid://cobhb70likea2" path="res://PlatformPlaceholder.png" id="11_pat5w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pat5w"]
radius = 36.013885

[sub_resource type="CircleShape2D" id="CircleShape2D_nnask"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t2ia"]
size = Vector2(398, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwe0f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdjp3"]
size = Vector2(180, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pat5w"]
size = Vector2(1035, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uc67x"]
size = Vector2(1033, 1123.5)

[node name="Node2D" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-4, -209)
collision_layer = 64
script = ExtResource("1_uc67x")
SPEED = 350.0
JUMP_VELOCITY = 555.0

[node name="dash timer" type="Timer" parent="Player"]
wait_time = 0.2

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.036979165, 0.06203704)
texture = ExtResource("2_jkt0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_pat5w")

[node name="dash particles" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 20
texture = ExtResource("3_qwe0f")
lifetime = 0.2
one_shot = true
speed_scale = 1.5
emission_shape = 1
emission_sphere_radius = 8.42
angle_min = -193.0
angle_max = 89.1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
position_smoothing_speed = 15.0
script = ExtResource("1_nnask")
testingMode = false
cameraYOffset = 250.0

[node name="treeGenerator" type="StaticBody2D" parent="."]
position = Vector2(-75, 0)
script = ExtResource("2_nnask")

[node name="TreeSample" type="Sprite2D" parent="treeGenerator"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_kmp1v")
offset = Vector2(0, -85)

[node name="CollisionShape2D" type="CollisionShape2D" parent="treeGenerator"]
shape = SubResource("CircleShape2D_nnask")
disabled = true

[node name="floorGenerator" type="StaticBody2D" parent="."]
script = ExtResource("2_cbkd1")
tile_number = 15.0
texture = ExtResource("1_k1dng")
Floor_Debug = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="floorGenerator"]
position = Vector2(0, -34)
shape = SubResource("RectangleShape2D_3t2ia")
debug_color = Color(2.7915835e-06, 0.6120229, 0.6268773, 0.41960785)

[node name="Ground" type="Sprite2D" parent="floorGenerator"]
scale = Vector2(1.56, 1.56)
texture = ExtResource("1_k1dng")

[node name="Spawner" type="StaticBody2D" parent="."]
position = Vector2(-75, 0)
script = ExtResource("8_sdjp3")
enemy_1 = ExtResource("9_sdjp3")
random_distacne = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawner"]
shape = SubResource("RectangleShape2D_qwe0f")
disabled = true

[node name="Enemy" parent="." instance=ExtResource("9_sdjp3")]
position = Vector2(-293, 820)

[node name="StoryArena" type="StaticBody2D" parent="."]
position = Vector2(315, 2027)
scale = Vector2(2, 2)

[node name="One-way-platform" type="StaticBody2D" parent="StoryArena"]
position = Vector2(0, 175)

[node name="Sprite2D" type="Sprite2D" parent="StoryArena/One-way-platform"]
texture = ExtResource("11_pat5w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoryArena/One-way-platform"]
shape = SubResource("RectangleShape2D_sdjp3")
one_way_collision = true

[node name="PlayerSpawn" type="Sprite2D" parent="StoryArena"]
position = Vector2(-329.5, 211.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_036ib")

[node name="Arena" type="Sprite2D" parent="StoryArena"]
position = Vector2(-664, -670.5)
scale = Vector2(5.18457, 5.18457)
texture = ExtResource("11_jkt0x")
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(0, 249)
shape = SubResource("RectangleShape2D_pat5w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(-400, 249)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_pat5w")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StoryArena"]
position = Vector2(440, 249)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_pat5w")

[node name="AreaTrigger" type="Area2D" parent="."]
position = Vector2(5224, 1447)
collision_layer = 64
collision_mask = 64
monitoring = false
script = ExtResource("9_gdfr4")
Enable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaTrigger"]
position = Vector2(513.5, 0)
shape = SubResource("RectangleShape2D_uc67x")
debug_color = Color(0, 0.6039216, 0.67058825, 1)

[connection signal="body_entered" from="AreaTrigger" to="AreaTrigger" method="_on_body_entered"]
